syntax = "proto3";

package ecommerce;

option go_package = "extended/client/ecommerce";

service Greeter {
  rpc sayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
